--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,6 @@
         <script src="./js/index.js"></script>
     </head>
 	<body>
-		<canvas width="640" height="480"></canvas>
+		<canvas style="background-color: greyscale(hsl(80,90%,20%));" width="640" height="480"></canvas>
     </body>
 </html>
